kubernates/student-portal-ns-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-portal-ns
  namespace: student-portal-ns
