kubernates/blackbox-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blackbox-exporter
  name: blackbox-exporter
  namespace: student-portal-ns
spec:
  ports:
    - name: "9115"
      port: 9115
      targetPort: 9115
  selector:
    app: blackbox-exporter
