kubernates/maildev-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: maildev
  name: maildev
  namespace: student-portal-ns
spec:
  ports:
    - name: "1080"
      port: 1080
      targetPort: 1080
    - name: "1025"
      port: 1025
      targetPort: 1025
  selector:
    app: maildev
