kubernates/mysql-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-db
  name: mysql-db
  namespace: student-portal-ns
spec:
  clusterIP: None
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    app: mysql-db
