kubernates/student-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: student-portal
  name: student-portal
  namespace: student-portal-ns
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
  selector:
    app: student-portal
